[Picture in Picture] Do not show controls when window is initially focused.

Currently, almost any way a window is initially focused will show the
controls. This includes:
- Focusing a browser window.
- Focusing the Picture-in-Picture window.
- Switching between Chrome profiles to a profile with an active Picture-
in-Picture window.

This causes the controls to appear a bit aggressively, even when the user
hasn't explicitly interacted with the window. This change will fix some
commented behavior, which was not supported: "...tabbing or touch gesture
will show the controls."

Any keyboard interaction will show the controls. The Tab key needed to
be specifically handled.

This removes some logic for a special case on when the window is initially
opened. This was also tested with VoiceOver on Mac.

Bug: 869042
Change-Id: Id05f916a4857afaba18453db1f0b220be78657ca
Reviewed-on: https://chromium-review.googlesource.com/1191820
Commit-Queue: apacible <apacible@chromium.org>
Reviewed-by: CJ DiMeglio <lethalantidote@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586835}
Former-commit-id: e9609aa3aec3e858dbf7d205b1a62743d6ff0584